--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "lucide-react": "^0.408.0",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
